Usunięcie komentarzy i poprawa klas