@@ -18,7 +18,7 @@ public class Student {
     }
 
     public void setName(String name) {
-        if (name == null || name.trim().isEmpty()) {
+        if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("Student name cannot be empty");
         }
         this.name = name;
